--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ GHGHGHGHGHGHG
 <br>
     <div id="disqus_thread"></div>
 	<div class="footer">
-		<p>© Copyright 2014 by isnowfy, Designed by isnowfy</p>
+		<p>© Copyright 2015 by hjjcccccc</p>
 	</div>
 </div>
 <script src="main.js"></script>
